--- a/estilo.css
+++ b/estilo.css
@@ -79,12 +79,12 @@ li{
 
 #botonvermas:hover {
     transform: scale(1.5);
+    color:#b8b4b3;
 
 }
 
 .boton:hover {
     background-color: rgb(187, 184, 184);
-
 }
 
 .cajaimgproductos {
