--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -32,6 +32,11 @@ $links: none;
     font-size: ($font-size)-6;
 }
 
+.contacto{
+    @extend .tituloprincipal;
+    font-size: ($font-size)-6;
+}
+
 li{
     color: $color;
     font-size: ($font-size/2)-3;
