--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,23 +1,20 @@
 .body {
   font-family: sans-serif, "pt sans narrow"; }
 
-.tituloprincipal, .titulos, #subtitulo, .contacto {
+.tituloprincipal, .titulos, #subtitulo {
   font-size: 10vw;
   font-family: sans-serif, "pt sans narrow";
   color: #b8b4b3;
   font-weight: bold;
   text-decoration: none; }
 
-.tituloprincipal:hover, .titulos:hover, #subtitulo:hover, .contacto:hover {
+.tituloprincipal:hover, .titulos:hover, #subtitulo:hover {
   color: #b8b4b3; }
 
 .titulos {
   font-size: 6vw; }
 
 #subtitulo {
-  font-size: 4vw; }
-
-.contacto {
   font-size: 4vw; }
 
 li {
