--- a/estilo.css
+++ b/estilo.css
@@ -40,6 +40,7 @@ nav {
     color: #b8b4b3;
     display: inline-block;
     text-decoration:none;
+    -ms-flex-align: end;
 }
 
 .navli:hover {
@@ -277,7 +278,7 @@ textarea {
 }
 
 .contacto {
-    margin-top: 30%;
+    margin-top: 40%;
     margin-bottom: 10%;
 }
 
@@ -290,12 +291,11 @@ footer{
     margin: 3% 0%;
     clear: both;
     height: 10%;
-    display: grid;
-    grid-template-columns: 40% 40%;
-    grid-template-areas: 
-    "contactofooter direccionfooter ";
 }
 
 .footera{
     color:black;
+    font-size: large;
+    text-decoration: none;
+    font-weight: bold;
 }
