--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,6 @@
 .body {
   font-family: sans-serif, "pt sans narrow"; }
 
-
 .tituloprincipal, .titulos, #subtitulo {
   font-size: 10vw;
   font-family: sans-serif, "pt sans narrow";
@@ -26,11 +25,6 @@ li {
   color: #b8b4b3;
   font-size: 2vw;
   font-weight: bold; }
-
-footer {
-  background-color: #b8b4b3;
-  color: black; }
-
 
 /* CSS ---------------------------------- */
 
@@ -244,17 +238,27 @@ textarea {
   margin: 30% 30% 30% 30%;
 }
 
-footer{
+.footer1{
     font-size: 80%;
     padding: 2%;
-    margin: 3% 0%;
+    margin-top: 3%;
+    margin-bottom: 0%;
     clear: both;
-    height: 10%;
+    height: 20%;
+    background-color: rgba(158, 157, 157, 0.692);
 }
 
 .footera{
-    color:black;
-    font-size: large;
-    text-decoration: none;
-    font-weight: bold;
+  color:rgb(94, 93, 93);
+}
+.footerb{
+  color:rgb(95, 94, 94);
+  font-size: large;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.copyright{
+  color: black;
+  background-color:rgba(128, 127, 127, 0.692);
 }
