--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,4 @@
-*{ margin: 0;
-  padding: 0;
-  }
-
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 .body {
   font-family: sans-serif, "pt sans narrow"; }
 
@@ -13,252 +10,237 @@
   text-decoration: none; }
 
 .tituloprincipal:hover, .titulos:hover, #subtitulo:hover {
-  color: #b8b4b3; }
+  color: #b8b4b3;
+  text-decoration: none; }
 
 .titulos {
-  font-size: 6vw; }
+  font-size: 5vw;
+  color: #868686; }
 
 #subtitulo {
-  font-size: 4vw; }
+  font-size: 4vw;
+  color: #868686; }
 
 li {
   color: #b8b4b3;
   font-size: 2vw;
   font-weight: bold; }
 
-/* CSS ---------------------------------- */
+footer {
+  font-size: 80%;
+  padding: 2%;
+  clear: both;
+  height: 10%;
+  background-color: #b8b4b3; }
 
+.footera {
+  color: black;
+  text-decoration: none; }
 
-  body {
-    /* font-family: sans-serif, 'pt sans narrow'; */
-    text-align: center;
-    font-style: normal;
-    text-decoration: none;
-    letter-spacing: 0.5px;
-}
-
-header{ 
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    
-}
-.tituloprincipal{
-    margin: 0%;
-    padding: 2%;
-}
-
-nav {
-    margin-top: 0%;
-    padding: 1%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-.navli{
-    color: #b8b4b3;
-    display: inline-block;
-    text-decoration:none;
-    -ms-flex-align: end;
-}
-
-.navli:hover {
-    border-top: 1px solid  #b8b4b3;
-    border-bottom: 1px solid #b8b4b3;
-    color:#b8b4b3;
-    
-}
-
-li{
-    list-style-position:inside;
-    display: inline-block;
-    margin: 0% 2% 0% 2%;
-    
-}
-
-.titulos {
-    text-align: center;
-    margin: 2%;
-}
-
-.cajaimginicio{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: flex-start;
-    flex-direction: row;
-}
-
-#botonvermas:hover {
-    transform: scale(1.5);
-    color:#b8b4b3;
-}
-
-.boton:hover {
-    background-color: rgb(187, 184, 184);
-}
-
-.page-item{
-    color:#b8b4b3;
-}
-
-.page-item:hover{
-    color:#b8b4b3;
-}
-
-.page-link{
-    color:#b8b4b3;
-}
-
-.page-link:hover{
-    color:#b8b4b3;
-}
-
-.cajaimgproductos {
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.imgproductos{
-    height: 15%;
-    width: 15%;
-    margin: 3%;
-}
-
-.imagen404 {
-  height: 30%;
-  width: 30%;
-  margin-top: 3%;
-}
-
-.imgproductos:hover{
-    width: 30% ;
-    height: 30%;
-    transition: all 3s;
-}
-
-.textoart {
-  text-align: justify;
-}
-
-.fotoconocenos {
-    background-repeat: no-repeat;
-    background-size:cover;
-}
-
-.textoconocenos {
-    text-align: justify;
-}
-
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-
-#form-div {
-	background-color:rgba(138, 136, 136, 0.4);
-	padding-left:10%;
-	padding-right:10%;
-	padding-top:10%;
-	padding-bottom:10%;
-    width: 100%;
-    margin-top: 3%;
-}
-
-.feedback-input {
-	color:#3c3c3c;
-	font-family: Helvetica, Arial, sans-serif;
-    font-weight:500px;
-	font-size: 90%;
-	border-radius: 1px;
-	line-height: 10%;
-	background-color: #fbfbfb;
-	padding: 5% 5% 5% 5%;
-	margin-bottom: 10%;
-	width:100%;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	box-sizing: border-box;
-    border: 3px solid rgba(0,0,0,0);
-}
-
-.feedback-input:focus{
-	background: #fff;
-	box-shadow: 0;
-	border: 3px solid #b6d1e4;
-	color: #b6d1e4;
-	outline: none;
-    padding: 13px 13px 13px 54px;
-}
-
-/* Icons ---------------------------------- */
-#name{
-	background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
-	background-size: 30px 30px;
-	background-position: 11px 8px;
-	background-repeat: no-repeat;
-}
-
-#name:focus{
-	background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
-	background-size: 30px 30px;
-	background-position: 8px 5px;
-    background-position: 11px 8px;
-	background-repeat: no-repeat;
-}
-
-#email{
-	background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
-	background-size: 30px 30px;
-	background-position: 11px 8px;
-	background-repeat: no-repeat;
-}
-
-#email:focus{
-	background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
-	background-size: 30px 30px;
-    background-position: 11px 8px;
-	background-repeat: no-repeat;
-}
-
-#comment{
-	background-image: url(http://rexkirby.com/kirbyandson/images/comment.svg);
-	background-size: 30px 30px;
-	background-position: 11px 8px;
-	background-repeat: no-repeat;
-}
-
-textarea {
-    width: 100%;
-    height: 150px;
-    line-height: 150%;
-    resize:vertical;
-}
-
-.contacto {
-  width: 80%;
-  margin: 30% 30% 30% 30%;
-}
-
-.footer1{
-    font-size: 80%;
-    padding: 2%;
-    margin-top: 3%;
-    margin-bottom: 0%;
-    clear: both;
-    height: 20%;
-    background-color: rgba(158, 157, 157, 0.692);
-}
-
-.footera{
-  color:rgb(94, 93, 93);
-}
-.footerb{
-  color:rgb(95, 94, 94);
+.footerb {
+  color: #5e5d5d;
   font-size: large;
   text-decoration: none;
-  font-weight: bold;
-}
+  margin-top: 3%;
+  font-weight: bold; }
 
-.copyright{
-  color: black;
-  background-color:rgba(128, 127, 127, 0.692);
-}
+.footerb:hover {
+  text-decoration: none;
+  color: #4e4e4e; }
+
+.copyright {
+  background-color: #9e9d9d;
+  padding: 0%; }
+
+/* CSS ---------------------------------- */
+body {
+  /* font-family: sans-serif, 'pt sans narrow'; */
+  text-align: center;
+  font-style: normal;
+  text-decoration: none;
+  letter-spacing: 0.5px; }
+
+header {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; }
+
+.tituloprincipal, .titulos, #subtitulo {
+  margin: 0%;
+  padding: 2%; }
+
+nav {
+  margin-top: 0%;
+  padding: 1%;
+  padding-top: 2%;
+  padding-bottom: 2%; }
+
+.navli {
+  color: #b8b4b3;
+  display: inline-block;
+  text-decoration: none;
+  -ms-flex-align: end; }
+
+.navli:hover {
+  border-top: 1px solid  #b8b4b3;
+  border-bottom: 1px solid #b8b4b3;
+  color: #b8b4b3; }
+
+li {
+  list-style-position: inside;
+  display: inline-block;
+  margin: 0% 2% 0% 2%; }
+
+.titulos {
+  text-align: center;
+  margin: 2%; }
+
+.cajaimginicio {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: row; }
+
+#botonvermas:hover {
+  transform: scale(1.5);
+  color: #b8b4b3; }
+
+.boton:hover {
+  background-color: #bbb8b8; }
+
+.page-item {
+  color: #b8b4b3; }
+
+.page-item:hover {
+  color: #b8b4b3; }
+
+.page-link {
+  color: #b8b4b3; }
+
+.page-link:hover {
+  color: #b8b4b3; }
+
+.cajaimgproductos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+
+.imgproductos {
+  height: 15%;
+  width: 15%;
+  margin: 3%; }
+
+.imgproductos:hover {
+  width: 30%;
+  height: 30%;
+  transition: all 3s; }
+
+.articulo1 {
+  display: grid; }
+
+.textoart1 {
+  text-align: justify; }
+
+.articulo2 {
+  display: grid;
+  grid-template-areas: "video2 textoart2" "textoart2 textoart2"; }
+
+.video2 {
+  grid-area: "video2"; }
+
+.textart2 {
+  grid-area: "textoart2";
+  text-align: justify; }
+
+.contenedorconocenos {
+  display: grid;
+  grid-template-columns: 50% 45%;
+  grid-template-areas: "fotoconocenos textoconocenos ";
+  margin: 5% 0%;
+  column-gap: 3%; }
+
+.fotoconocenos {
+  background-image: url("fotos/fotoconocenos.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.textoconocenos {
+  text-align: justify; }
+
+#form-div {
+  background-color: rgba(138, 136, 136, 0.4);
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  width: 100%;
+  margin-top: 3%; }
+
+.feedback-input {
+  color: #3c3c3c;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 500px;
+  font-size: 90%;
+  border-radius: 1px;
+  line-height: 10%;
+  background-color: #fbfbfb;
+  padding: 5% 5% 5% 5%;
+  margin-bottom: 10%;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 3px solid rgba(0, 0, 0, 0); }
+
+.feedback-input:focus {
+  background: #fff;
+  box-shadow: 0;
+  border: 3px solid #b6d1e4;
+  color: #b6d1e4;
+  outline: none;
+  padding: 13px 13px 13px 54px; }
+
+/* Icons ---------------------------------- */
+#name {
+  background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
+  background-size: 30px 30px;
+  background-position: 11px 8px;
+  background-repeat: no-repeat; }
+
+#name:focus {
+  background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
+  background-size: 30px 30px;
+  background-position: 8px 5px;
+  background-position: 11px 8px;
+  background-repeat: no-repeat; }
+
+#email {
+  background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
+  background-size: 30px 30px;
+  background-position: 11px 8px;
+  background-repeat: no-repeat; }
+
+#email:focus {
+  background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
+  background-size: 30px 30px;
+  background-position: 11px 8px;
+  background-repeat: no-repeat; }
+
+#comment {
+  background-image: url(http://rexkirby.com/kirbyandson/images/comment.svg);
+  background-size: 30px 30px;
+  background-position: 11px 8px;
+  background-repeat: no-repeat; }
+
+textarea {
+  width: 100%;
+  height: 150px;
+  line-height: 150%;
+  resize: vertical; }
+
+.contacto {
+  margin-top: 40%;
+  margin-bottom: 10%; }
