--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,11 +18,11 @@
 
 .titulos {
   font-size: 5vw;
-  color: #868686; }
+  color: #b8b4b3; }
 
 #subtitulo {
   font-size: 4vw;
-  color: #868686; }
+  color: #b8b4b3; }
 
 li {
   color: #b8b4b3;
@@ -79,12 +79,6 @@ header {
   margin: 0%;
   padding: 2%; }
 
-nav {
-  margin-top: 0%;
-  padding: 1%;
-  padding-top: 2%;
-  padding-bottom: 2%; }
-
 .navli {
   color: #b8b4b3;
   display: inline-block;
@@ -92,9 +86,8 @@ nav {
   -ms-flex-align: end; }
 
 .navli:hover {
-  border-top: 1px solid  #b8b4b3;
-  border-bottom: 1px solid #b8b4b3;
-  color: #b8b4b3; }
+  color: #a09e9d;
+  text-decoration: none; }
 
 li {
   list-style-position: inside;
@@ -158,7 +151,8 @@ li {
   padding-top: 10%;
   padding-bottom: 10%;
   width: 100%;
-  margin-top: 3%; }
+  margin-top: 3%;
+  margin-bottom: 5%; }
 
 .feedback-input {
   color: #3c3c3c;
@@ -224,5 +218,5 @@ textarea {
   resize: vertical; }
 
 .contacto {
-  margin-top: 40%;
-  margin-bottom: 10%; }
+  width: 100%;
+  margin: 20% 20%; }
