--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -30,13 +30,13 @@ $links: none;
 .titulos {
     @extend .tituloprincipal;
     font-size: ($font-size)-5;
-    color: #868686;
+    color: $color;
 }
 
 #subtitulo{
     @extend .tituloprincipal;
     font-size: ($font-size)-6;
-    color: #868686;
+    color: $color;
 }
 
 li{
@@ -107,12 +107,6 @@ header{
     padding: 2%;
 }
 
-nav {
-    margin-top: 0%;
-    padding: 1%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
 .navli{
     color: #b8b4b3;
     display: inline-block;
@@ -121,10 +115,8 @@ nav {
 }
 
 .navli:hover {
-    border-top: 1px solid  #b8b4b3;
-    border-bottom: 1px solid #b8b4b3;
-    color:#b8b4b3;
-    
+    color:#a09e9d;
+    text-decoration:none;
 }
 
 li{
@@ -206,6 +198,7 @@ li{
 	padding-bottom:10%;
     width: 100%;
     margin-top: 3%;
+    margin-bottom: 5%;
 }
 
 .feedback-input {
@@ -280,6 +273,6 @@ textarea {
 }
 
 .contacto {
-    margin-top: 40%;
-    margin-bottom: 10%;
+    width: 100%;
+    margin: 20% 20%;
 }
