--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -182,10 +182,8 @@ li{
 }
 
 .fotoconocenos {
-    background-image: url("fotos/fotoconocenos.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    width: 100%;
+    margin: auto;
 }
 
 .textoconocenos {
