--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,9 +39,9 @@ li {
 
 footer {
   font-size: 80%;
-  padding: 2%;
   clear: both;
   height: 10%;
+  padding-top: 1%;
   background-color: #b8b4b3; }
 
 .footera {
