--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -57,9 +57,9 @@ li{
 
 footer {
     font-size: 80%;
-    padding: 2%;
     clear: both;
     height: 10%;
+    padding-top: 1%;
     background-color: $color;
 }
 
